# plutus

./: .dockerignore  .gitignore  BILLING.md  CHANGELOG.md  Dockerfile  FABLE5-HANDOFF.md  HANDOFF-DEV.md  HANDOFF-HERMES-SYNC.md  HANDOFF.md  MANIFEST.in  README.md  ROADMAP-1.0.md  ROADMAP.md  dashboard.html  docker-compose.yaml  install.sh  openapi.yaml  plutus-refresh.sh  plutus.budgets.example.json  plutus.py  plutus_route.py  pyproject.toml  terminal-output.txt  test_plutus.py
.github/workflows/: release.yml  test.yml
docs/: api.md  auth.md  benchmark-cost-attribution.md  claude-code.md  postgres.md  schema.md  security-review-2026-06-27.md
docs/exhibits/: SAMPLE-cost-attribution.csv  SAMPLE-cost-attribution.json
examples/: claude_code_hook.py  hermes_integration.py  hermes_sync.py  quickstart.py
plutus_agent/: __init__.py  __main__.py  alerts.py  benchmark_cost.py  bridge.py  cli.py  client.py  config.py  db.py  demo.py  metering.py  pricing.py  reports.py  utils.py
plutus_agent/billing/: __init__.py  stripe_client.py
plutus_agent/integrations/: __init__.py  adapters.py  claude_code_hook.py
plutus_agent/server/: __init__.py  api.py  app.py  auth.py  views.py
prompts/: plutus-roadmap-2026-2027.md
tests/: test_admin_api.py  test_auth.py  test_auth_tenant.py  test_benchmark_cost.py  test_csrf_token.py  test_engine.py  test_export_pagination.py  test_hermes_sync.py  test_idempotency_purge.py  test_ingest_hardening.py  test_micros.py  test_money_cluster.py  test_negative_cost.py  test_negative_tokens.py  test_prepaid_default.py  test_pricing_unpriced.py  test_punchlist.py  test_schema_version.py  test_server.py  test_signup_cap.py  test_signup_ip_throttle.py  test_version_single_source.py  test_webhook_reversals.py
